<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MayushiiActivity">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/view"
            android:src="@drawable/background_5"
            android:scaleType="centerCrop"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/tuturu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bTuturu1"
                    android:onClick="playSound"/>

            <Button
                    android:text="@string/tuturu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bTuturu2"
                    android:onClick="playSound"/>

            <Button
                    android:text="@string/tuturu3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bTuturu3"
                    android:onClick="playSound"/>


        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/tuturu4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bTuturu4"
                    android:onClick="playSound"/>

            <Button
                    android:text="@string/tuturu5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bTuturu5"
                    android:onClick="playSound"/>

            <Button
                    android:text="@string/tuturu6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bTuturu6"
                    android:onClick="playSound"/>


        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/karaage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bKaraage001"
                    android:onClick="playSound"/>

            <Button
                    android:text="@string/karaage2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bKaraage002"
                    android:onClick="playSound"/>
            <Button
                    android:text="@string/sugoine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bSugoine"
                    android:onClick="playSound"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/okarin1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bOkarin1"
                    android:onClick="playSound"/>
            <Button
                    android:text="@string/okarin2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bOkarin2"
                    android:onClick="playSound"/>
            <Button
                    android:text="@string/watch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bWatch"
                    android:onClick="playSound"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/metal_upa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bMetalUpa"
                    android:onClick="playSound"/>

            <Button
                    android:text="@string/gelbana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bGelbana"
                    android:onClick="playSound"/>
            <Button
                    android:text="@string/kurisuchan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bKurisuchan"
                    android:onClick="playSound"/>
        </TableRow>
    </TableLayout>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="?attr/homeAsUpIndicator" android:id="@+id/imageButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="2dp"
            android:onClick="back"/>
</androidx.constraintlayout.widget.ConstraintLayout>