<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DaruActivity">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/view"
            android:src="@drawable/background_5"
            android:scaleType="centerCrop"/>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/hakka1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bHakka"
                    android:onClick="playSound"/>
            <Button
                    android:text="@string/scream1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bScream1"
                    android:onClick="playSound"/>
            <Button
                    android:text="@string/tsundere1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bTsundere1"
                    android:onClick="playSound"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/hakka2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bHakka2"
                    android:onClick="playSound"/>
            <Button
                    android:text="@string/scream2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bScream2"
                    android:onClick="playSound"/>
            <Button
                    android:text="@string/tsundere2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bTsundere2"
                    android:onClick="playSound"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/gentleman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bGentleman"
                    android:onClick="playSound"/>
            <Button
                    android:text="@string/cheapass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bCheapass"
                    android:onClick="playSound"/>
            <Button
                    android:text="@string/chuunibyou"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bChuunibyou"
                    android:onClick="playSound"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/faris_tan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bFarisTan"
                    android:onClick="playSound"/>
            <Button
                    android:text="@string/daru_thing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bDaruThing"
                    android:onClick="playSound"/>
            <Button
                    android:text="@string/banana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bBanana"
                    android:onClick="playSound"/>
        </TableRow>
    </TableLayout>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="?attr/homeAsUpIndicator" android:id="@+id/imageButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="2dp"
            android:onClick="back"/>
</androidx.constraintlayout.widget.ConstraintLayout>